[gd_scene load_steps=10 format=2]

[ext_resource path="res://fonts/font_pixel.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/others/parabens.gd" type="Script" id=2]
[ext_resource path="res://sprites/others/Screen_pause.png" type="Texture" id=3]
[ext_resource path="res://fonts/monogram-extended.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://sprites/flower/flower_lunar/flower_stage05.png" type="Texture" id=5]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

void fragment() {
    float alpha = texture(TEXTURE, UV).a;
    COLOR.a = step(0.5, alpha);
}"

[sub_resource type="ShaderMaterial" id=13]
shader = SubResource( 1 )

[sub_resource type="DynamicFont" id=14]
outline_size = 1
outline_color = Color( 0.501961, 0.407843, 0.701961, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=15]
outline_size = 1
outline_color = Color( 0.631373, 0.694118, 0.901961, 1 )
font_data = ExtResource( 4 )

[node name="parabens" type="CanvasLayer"]
pause_mode = 2
layer = 3
script = ExtResource( 2 )

[node name="background" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.415686 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true

[node name="menu" type="Button" parent="."]
material = SubResource( 13 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -34.0
margin_top = -19.0
margin_right = 34.0
margin_bottom = 1.0
custom_colors/font_color_hover = Color( 0.521569, 0.368627, 0.701961, 1 )
custom_fonts/font = ExtResource( 1 )
text = "menu"
flat = true

[node name="texto_flor" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -47.5
margin_top = -47.0
margin_right = 45.5
margin_bottom = -18.0
custom_fonts/font = SubResource( 14 )
text = "flor nivel 0"
align = 1
valign = 1

[node name="texto_parabens_max" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -84.5
margin_right = 90.0
margin_bottom = -39.5
custom_fonts/font = SubResource( 15 )
text = "!PARABÉNS!

você alem de completar o jogo
 você alcançou o nivel maximo "
align = 1
valign = 1

[node name="texto_parabens" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -84.5
margin_right = 90.0
margin_bottom = -39.5
custom_fonts/font = SubResource( 15 )
text = "!PARABÉNS!

você completou o jogo"
align = 1
valign = 1

[node name="flor_sprite" type="Sprite" parent="."]
position = Vector2( 168, 86 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 5 )
hframes = 4

[connection signal="pressed" from="menu" to="." method="_on_menu_pressed"]
